--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "generate a readme file by using the information the user input in the comman line",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Wenbo Li",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^8.2.4"
+  },
+  "keywords": [
+    "readme",
+    "generator"
+  ]
 }
